로그인/회원가입

--- a/src/main/resources/templates/ticket/ticket.html
+++ b/src/main/resources/templates/ticket/ticket.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../../../../../trip/css/header.css" />
-    <link rel="stylesheet" href="../../../../../../trip/css/ticket/ticket.css" />
+    <link rel="stylesheet" href="../../../../trip/css/ticket/ticket.css" />
     <script src="../../../../../../trip/js/header.js" defer></script>
     <link
       rel="stylesheet"
