--- a/src/main/resources/templates/login/binSignUp.html
+++ b/src/main/resources/templates/login/binSignUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../css/sign.css" rel="stylesheet" type="text/css">
+    <link href="/css/login/sign.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
