--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="header.css" />
-    <script type="text/javascript" src="header.js"></script> 
+    <script type="text/javascript" src="/js/header_foter/header.js"></script>
    
 </head>
+
 <div class="container">
 <header>
+
   <div class="header_content">
-      <h1 class="logo"><a href="main.html">traveler</a></h1>
+      <h1 class="logo"><a href="/">traveler</a></h1>
     <div class="button_content">
       <button class="schedule">나의 일정</button>
       <button class="mypage">마이페이지</button>
@@ -21,7 +23,7 @@
   </div>
   <nav>
     <ul id="menu">
-        <li><a href="nation.html">국가별</a></li>
+        <li><a href="/">국가별</a></li>
         <li><a href="/">항공</a></li>
         <li><a href="/">숙박</a></li>
         <li><a href="/">티켓</a></li>
@@ -29,6 +31,20 @@
         <li>자유게시판</li>
     </ul>
   </nav>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+        // 네비게이션 메뉴 항목에 클릭 이벤트 리스너 추가
+        const menuItems = document.querySelectorAll('#menu li');
+        menuItems.forEach(item => {
+            item.addEventListener('click', function() {
+                // 모든 항목에서 active 클래스 제거
+                menuItems.forEach(i => i.classList.remove('active'));
+                // 클릭된 항목에 active 클래스 추가
+                this.classList.add('active');
+            });
+        });
+    });
+    </script>
 </header>
 
 </div>
