--- a/src/main/resources/templates/header_foter/foter.html
+++ b/src/main/resources/templates/header_foter/foter.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="foter.css" />
-    <script type="text/javascript" src="foter.js"></script> 
+
 </head>
 <body>
-    <div class="foter"> 
-asdf
+<footer th:fragment="foter">
+    <div class="footer-content">
+        <div class="foter">
+            asdf
+        </div>
     </div>
+</footer>
+
 </body>
 </html>
