--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="/css/main/main.css">
-    <script src="/js/header_foter/header.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="/css/header_foter/header.css">
+    <link rel="stylesheet" href="/css/header_foter/foter.css" />
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/includeHTML.js" defer></script>
 </head>
 <body>
-<script src="/js/header_foter/header.js"></script>
+<div th:replace="header_foter/header :: header"></div>
 <main>
+
     <div class="bgimg" style="background-image: url('./imgs/serchimg.jpg');">
         <div class="search-box">
             <input type="text" placeholder="여행지를 검색해보세요">
@@ -71,18 +74,19 @@
         </div>
     </div>
 
-    <script>
-        $(document).ready(function(){
-            $("#header-placeholder").load("/header.html");
-            $("#foter-placeholder").load("/footer.html");
 
-            $("#more").click(function(){
-                $("#trip_container").show();
-                $("#more").hide();
-            });
-        });
-    </script>
 </main>
-<div id="foter-placeholder"></div>
+<div th:replace="header_foter/foter :: foter"></div>
+<script>
+    $(document).ready(function(){
+        $("#header-placeholder").load("/header.html");
+        $("#foter-placeholder").load("/footer.html");
+
+        $("#more").click(function(){
+            $("#trip_container").show();
+            $("#more").hide();
+        });
+    });
+</script>
 </body>
 </html>
