--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -23,7 +23,7 @@
   </div>
   <nav>
     <ul id="menu">
-        <li><a href="/">국가별</a></li>
+        <li><a href="/nation">국가별</a></li>
         <li><a href="/">항공</a></li>
         <li><a href="/">숙박</a></li>
         <li><a href="/">티켓</a></li>
