--- a/src/main/resources/static/css/main/nation.css
+++ b/src/main/resources/static/css/main/nation.css
@@ -1,4 +1,3 @@
-
 main {
     padding-top:141px; /* header와 nav의 높이에 따라 조정 */
     padding-bottom: 50px;
@@ -6,8 +5,9 @@ main {
 body, html {
     height: 100%;
     margin: 0;
-    
+
 }
+
 .bgimg {
     height: 300px;
     background-position: center;
@@ -46,12 +46,13 @@ body, html {
     background-color: #0056b3;
 }
 
-
-/* best 여행지 */
-
+/*나라 추천*/
+.best-container{
+    margin-top: 80px;
+}
 .best-trip {
     display: flex;
-    gap: 40px;
+    gap: 70px;
     padding-left: 80px;
 }
 .best_btn {
@@ -68,7 +69,7 @@ body, html {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 .best_btn img {
-    width: 200px;
+    width: 250px;
     height: 150px;
     object-fit: cover;
     border-radius: 10px;
@@ -76,7 +77,7 @@ body, html {
 .best_btn h3 {
     margin-top: 10px;
     font-size: 1.2em;
-    
+
 }
 .best_text {
     font-weight:bolder;
@@ -84,68 +85,6 @@ body, html {
     margin-bottom: 50px;
     margin-top: 50px;
 
-}   
-/* 게시판 */
-.community_text{
-    
-    font-weight:bolder;
-   
-  
-    
-}
-.coummunity_top{
-    display: flex;
-    margin-top: 100px;
-    padding-left: 20px;
-    margin-bottom: 20px;
-    justify-content: space-between;
-}
-.community_detail_btn{
-    background-color: #007bff;
-    width: 150px;
-    height: 50px;
-    margin-right: 20px;
-    border: none;
-    cursor: pointer;
-    color: white;
-    font-weight:bolder;
-    border-radius: 10px;
-    transition: all 0.3s;
- 
-    
-}
-.community_detail_btn:hover{
-    background-color: lightskyblue;
- 
-    
-}
-
-
-
-
-.coummunity_title{
-    margin-left: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-}
-.coummunity_title button{
-    width: 100%;
-    text-align: left;
-    font-weight:bolder;
-    height: 50px;
-    background-color: transparent;
-    border-radius: 10px;
-    border: 1px solid  lightslategray;
-    cursor: pointer;
-    transition: all 0.3s;
-}
-.coummunity_title button p{
-  margin-left: 40px;
-}
-.coummunity_title button:hover{
-    background-color: #5050FF;
-    color: #fff;
-    font-weight:bolder;
 }
 
 /*패키지*/
@@ -180,36 +119,4 @@ body, html {
 .package_btn:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-/*더보기 버튼*/
-.more{
-    display: flex;
-    margin-top: 30px;
-    justify-content: center;
-}
-
-.more_btn{
-    width: 500px;
-    height: 40px;
-    border: none;
-    border-radius: 10px;
-    background-color: #007bff;
-    cursor: pointer;
-
-
-}
-.more_btn:hover{
-
-    background-color: #5050FF;
-    
-
-}
-
-
-
-.trip_container{
-    display: none;
-
-    
 }
