--- a/src/main/resources/templates/nation/nation.html
+++ b/src/main/resources/templates/nation/nation.html
@@ -28,36 +28,36 @@
             </button>
             <button type="button" class="best_btn" data-id="200" onclick="goToDetail(this)">
                 <img src="/imgs/푸꾸옥.jpeg" alt="푸꾸옥">
-                <h3>푸꾸옥</h3>
+                <h3>베트남</h3>
             </button>
             <button type="button" class="best_btn" data-id="300" onclick="goToDetail(this)">
                 <img src="/imgs/타이베이.jpeg" alt="타이베이">
-                <h3>타이베이</h3>
+                <h3>대만</h3>
             </button>
             <button type="button" class="best_btn" data-id="400" onclick="goToDetail(this)">
                 <img src="/imgs/오사카.jpeg" alt="오사카">
-                <h3>오사카</h3>
+                <h3>필리핀</h3>
             </button>
         </div>
     </div>
 
     <div class="best-container">
         <div class="best-trip">
-            <button type="button" class="best_btn" data-id="101" onclick="goToDetail(this)">
+            <button type="button" class="best_btn" data-id="500" onclick="goToDetail(this)">
                 <img src="/imgs/일본1.jpeg" alt="도쿄">
-                <h3>도쿄</h3>
+                <h3>인도네시아</h3>
             </button>
-            <button type="button" class="best_btn" data-id="201" onclick="goToDetail(this)">
+            <button type="button" class="best_btn" data-id="600" onclick="goToDetail(this)">
                 <img src="/imgs/푸꾸옥.jpeg" alt="푸꾸옥">
-                <h3>푸꾸옥</h3>
+                <h3>인도</h3>
             </button>
-            <button type="button" class="best_btn" data-id="301" onclick="goToDetail(this)">
+            <button type="button" class="best_btn" data-id="700" onclick="goToDetail(this)">
                 <img src="/imgs/타이베이.jpeg" alt="타이베이">
-                <h3>타이베이</h3>
+                <h3>태국</h3>
             </button>
-            <button type="button" class="best_btn" data-id="401" onclick="goToDetail(this)">
+            <button type="button" class="best_btn" data-id="800" onclick="goToDetail(this)">
                 <img src="/imgs/오사카.jpeg" alt="오사카">
-                <h3>오사카</h3>
+                <h3>호주</h3>
             </button>
         </div>
     </div>
