--- a/src/main/resources/static/css/main/nation.css
+++ b/src/main/resources/static/css/main/nation.css
@@ -1,9 +1,10 @@
 main {
     padding-top:141px; /* header와 nav의 높이에 따라 조정 */
     padding-bottom: 50px;
+    height: 100%;
   }
 body, html {
-    height: 100%;
+    height: 200vh;
     margin: 0;
 
 }
