--- a/src/main/resources/static/css/main/nationDetail.css
+++ b/src/main/resources/static/css/main/nationDetail.css
@@ -1,9 +1,65 @@
 main {
     padding-top:141px; /* header와 nav의 높이에 따라 조정 */
     padding-bottom: 50px;
+    height: 100%;
+
   }
 body, html {
-    height: 100%;
+    height: 300vh;
     margin: 0;
 
 }
+.nation_detail_con{
+
+    border : 1px solid black;
+    border-radius: 10px;
+    width : 950px;
+    height: 600px;
+    position: absolute;
+    top: 450px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.nation_detail_con h1{
+    margin-left : 10px;
+
+}
+.nat_text{
+   margin-left : 10px;
+   margin-top : 350px;
+
+}
+
+.country_information{
+    display : flex;
+    margin-left : 10px;
+    gap: 30px;
+
+}
+.icon_mon{
+
+    background-image: url(/imgs/icon.png);
+    background-size: 415px auto;
+    background-position: -250px -296px;
+    width: 17px;
+    height: 18px;
+}
+.nat_month{
+    width: 200px;
+    height: 50px
+    border : 1px solid black;
+    border-radius: 10px;
+}
+.nat_airtime{
+     border : 1px solid black;
+     height: 50px;
+     border-radius: 10px;
+}
+.nat_exchange{
+     border : 1px solid black;
+     height: 50px;
+     border-radius: 10px;
+}
+
+
