--- a/src/main/resources/static/css/pack/pack.css
+++ b/src/main/resources/static/css/pack/pack.css
@@ -1,89 +1,89 @@
 .pack_content {
-  max-width: 1000px;
-  display: flex;
-  margin-bottom: 100px;
-  margin-top: 200px;
-  display: flex;
-  justify-content: center;
+    margin: 0 auto;
+    max-width: 1000px;
+    margin-bottom: 100px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
 }
 
-.search-bar {
-  display: flex;
-  margin-top: 100px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 5px;
+.search_bar {
+    display: flex;
+    margin-top: 100px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
 }
 
-.search-bar select {
-  border: none;
-  outline: none;
-  padding: 5px;
-  font-size: 14px;
+.search_bar select {
+    border: none;
+    outline: none;
+    padding: 5px;
+    font-size: 14px;
 }
 
-.search-bar span {
-  margin: 0 5px;
-  color: gray;
+.search_bar span {
+    margin: 0 5px;
+    color: gray;
 }
 
-.search-bar input {
-  position: relative;
-  border: none;
-  outline: none;
-  flex-grow: 1;
-  padding: 15px;
-  font-size: 14px;
-  width: 300px;
+.search_bar input {
+    position: relative;
+    border: none;
+    outline: none;
+    flex-grow: 1;
+    padding: 15px;
+    font-size: 14px;
+    width: 300px;
 }
 
-.search-bar button {
-  background: none;
-  border: none;
-  cursor: pointer;
+.search_bar button {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
-.search-bar__Btn {
-  font-size: 25px;
-  margin-left: 150px;
+.search_bar__Btn {
+    font-size: 25px;
+    margin-left: 150px;
 }
 
 .header_icons {
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  margin-bottom: 10px;
-  gap: 50px;
-  font-size: 40px;
-  margin-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    margin-bottom: 10px;
+    gap: 50px;
+    font-size: 40px;
+    margin-left: 50px;
 }
 
-.search-results {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  border-radius: 5px;
-  max-width: 1000px;
-  margin: 20px auto;
+.search_results {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 5px;
+    max-width: 1000px;
+    margin: 20px auto;
 }
 
-.search-results .total-count {
-  font-size: 16px;
+.search_results .total_count {
+    font-size: 16px;
 }
 
-.search-results .total-count .count {
-  color: red;
+.search_results .total_count .count {
+    color: red;
 }
 
-.search-results .wishlist {
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  cursor: pointer;
+.search_results .wishlist {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    cursor: pointer;
 }
 
-.search-results .wishlist i {
-  color: red;
-  margin-left: 5px;
+.search_results .wishlist i {
+    color: red;
+    margin-left: 5px;
 }
