--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -24,10 +24,10 @@
   <nav>
     <ul id="menu">
         <li><a href="/nation">국가별</a></li>
-        <li><a href="/">항공</a></li>
-        <li><a href="/">숙박</a></li>
-        <li><a href="/">티켓</a></li>
-        <li><a href="/">패키지</a></li>
+        <li><a href="/air">항공</a></li>
+        <li><a href="/hotel">숙박</a></li>
+        <li><a href="/ticket">티켓</a></li>
+        <li><a href="/pack">패키지</a></li>
         <li>자유게시판</li>
     </ul>
   </nav>
