--- a/src/main/resources/static/css/main/nationDetail.css
+++ b/src/main/resources/static/css/main/nationDetail.css
@@ -52,14 +52,48 @@ body, html {
     border-radius: 10px;
 }
 .nat_airtime{
-     border : 1px solid black;
-     height: 50px;
-     border-radius: 10px;
+    margin-left : 30px
+}
+.nat_airtime span{
+    font-weight : bold;
+    font-size : 24px;
+}
+.nat_airtime p{
+    margin-left : 30px;
+    height : 15px;
+    width: 50px;
+    font-weight : bold;
+
+}
+/* 환율*/
+
+.icon_exchange{
+    background-image: url(/imgs/icon.png);
+    background-size: 415px auto;
+    background-position: -134px -52px;
+    width: 13px;
+    height: 17px;
+}
+.nat_exchange_con{
+    width: 200px;
+    height: auto;
+
+    background : rgba(246,247,247,1);
+    border-radius: 12px;
+
 }
 .nat_exchange{
-     border : 1px solid black;
-     height: 50px;
-     border-radius: 10px;
+    margin-left : 30px
 }
+.nat_exchange span{
+    font-weight : bold;
+    font-size : 24px;
+}
+.nat_exchange p{
+    margin-left : 30px;
+    height : 15px;
+    width: 50px;
+    font-weight : bold;
 
+}
 
