--- a/src/main/resources/templates/nation/natDetaile.html
+++ b/src/main/resources/templates/nation/natDetaile.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/header_foter/header.css">
     <link rel="stylesheet" href="/css/header_foter/foter.css">
     <link rel="stylesheet" href="/css/main/nationDetail.css">
+    <script src="/js/city/city.js" ></script>
 </head>
 <body>
 <div th:replace="header_foter/header :: header"></div>
@@ -13,15 +14,42 @@
 
     <div class="nation_detail_con">
         <h1 th:text="${nation.natName}"></h1>
+        <div class="city_btn_con">
+            <div  th:each="city : ${nation.cities}">
+                <button class="city_btn" th:text="${city.cityName}" th:data-cityno="${city.cityNO}"></button>
+
+            </div>
+        </div>
+        <div id="image_con" class="image_con"></div>
+
+
         <p class="nat_text" th:text="${nation.natText}"></p>
+
         <div class="country_information">
-        <div class="nat_month">
-            <div class="icon_mon"></div>
-            <p>추천 방문 시기:</p><span th:text="${nation.natMonth}">dfd</span>
+            <div class="nat_month_con">
+                <div class="nat_month">
+                    <div class="icon_mon"><p>추천</p></div>
+                    <span th:text="${nation.natMonth}"></span>
+                </div>
+            </div>
+
+            <div class="nat_airtime_con">
+                <div class="nat_airtime">
+                    <div class="icon_airtime"><p>항공</p></div>
+                    <span th:text="${nation.natAirTime}"></span>
+
+                </div>
+            </div>
+
+            <div class="nat_exchange_con">
+                <div class="nat_exchange">
+                    <div class="icon_exchange"><p>환율</p> </div>
+                    <span th:text="${nation.exchange}"></span>
+                </div>
+            </div>
+
         </div>
-        <p class="nat_airtime">항공 시간: <span th:text="${nation.natAirTime}"></span></p>
-        <p class="nat_exchange">환율: <span th:text="${nation.exchange}"></span></p>
-        </div>
+
     </div>
 
 
@@ -30,4 +58,27 @@
 </main>
 <div th:replace="header_foter/foter :: foter"></div>
 </body>
+<script th:inline="javascript">
+    // Thymeleaf에서 변수를 JavaScript로 가져오기 위해 사용합니다
+    var natName = /*[[${nation.natName}]]*/ '일본';
+
+    // 이미지 폴더에서 가져올 이미지들의 정보를 객체 배열로 정의합니다
+    var images = [
+        { title: '일본', filenames: ['일본2.jpeg', '일본3.jpeg', '일본4.jpeg'] },
+        { title: '호주', filenames: ['호주1.jpg', '호주2.jpg'] }
+        // 다른 국가들에 대한 이미지도 필요에 따라 추가할 수 있습니다
+    ];
+
+    // natName과 일치하는 국가의 이미지 파일들을 가져와서 표시합니다
+    images.forEach(function(item) {
+        if (item.title === natName) {
+            item.filenames.forEach(function(filename) {
+                var imgElement = document.createElement('img');
+                imgElement.src = '/imgs/' + filename;
+                imgElement.alt = natName + ' 사진';
+                document.getElementById('image_con').appendChild(imgElement);
+            });
+        }
+    });
+</script>
 </html>
