--- a/src/main/resources/static/css/main/nationDetail.css
+++ b/src/main/resources/static/css/main/nationDetail.css
@@ -7,11 +7,43 @@ main {
 body, html {
     height: 300vh;
     margin: 0;
+    background : rgba(240,240,243,1);
 
 }
-.nation_detail_con{
+.city_btn_con{
+    display: flex;
 
-    border : 1px solid black;
+}
+.image_con{
+    margin-top: 20px;
+    margin-bottom : 30px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+.image_con img{
+    border-radius : 20px;
+    width: 280px;
+    height : 150px;
+}
+.city_btn{
+    margin-left : 30px;
+    width : 100px;
+    height : 50px;
+    background: inherit;
+    border : 1px solid #0000003d;
+    border-radius : 20px;
+    cursor: pointer;
+}
+.city_btn:hover{
+    background-color: #3b75ff;
+    color : white;
+}
+
+
+.nation_detail_con{
+    background : white;
+    border : 1px solid #0000001a;
     border-radius: 10px;
     width : 950px;
     height: 600px;
@@ -27,7 +59,7 @@ body, html {
 }
 .nat_text{
    margin-left : 10px;
-   margin-top : 350px;
+
 
 }
 
@@ -37,6 +69,7 @@ body, html {
     gap: 30px;
 
 }
+/*추천월*/
 .icon_mon{
 
     background-image: url(/imgs/icon.png);
@@ -44,12 +77,47 @@ body, html {
     background-position: -250px -296px;
     width: 17px;
     height: 18px;
+
+}
+.nat_month_con{
+    width: 300px;
+    height: auto;
+
+    background : rgba(246,247,247,1);
+    border-radius: 12px;
+
 }
 .nat_month{
-    width: 200px;
-    height: 50px
-    border : 1px solid black;
-    border-radius: 10px;
+    margin-left : 30px
+}
+.nat_month span{
+    font-weight : bold;
+    font-size : 24px;
+}
+.nat_month p{
+    margin-left : 20px;
+    height : 10px;
+    width: 50px;
+    font-weight : bold;
+
+}
+/* 비행 시간*/
+
+.icon_airtime{
+
+    background-image: url(/imgs/icon.png);
+       background-size: 415px auto;
+       background-position: -240px -189px;
+       width: 18px;
+       height: 17px;
+}
+.nat_airtime_con{
+    width: 250px;
+    height: auto;
+
+    background : rgba(246,247,247,1);
+    border-radius: 12px;
+
 }
 .nat_airtime{
     margin-left : 30px
@@ -96,4 +164,3 @@ body, html {
     font-weight : bold;
 
 }
-
