--- a/src/main/resources/templates/login/binSignUp.html
+++ b/src/main/resources/templates/login/binSignUp.html
@@ -10,7 +10,7 @@
     <div class="bin_header_content">
         <h1>traveler</h1>
     </div>
-    <form action="">
+    <form zzaction="">
         <div class="sign_content">
             <div class="id_content">
                 <input type="text" name="binId" placeholder="아이디">
