--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <div class="header_content">
         <h1>traveler</h1>
     </div>
-    <form name="f" th:action="@{/user/login}" method="post">
+    <form>
         <div class="login_content">
             <input type="text" name="userId" id="userId" placeholder="아이디">
             <input type="password" name="userPw" id="userPw" placeholder="비밀번호">
