세션 로그인 및 로그인 페이지 수정

--- a/src/main/resources/static/css/header_foter/header.css
+++ b/src/main/resources/static/css/header_foter/header.css
@@ -42,7 +42,7 @@ header {
   margin-right: 5px;
 }
 
-.schedule, .mypage {
+.schedule, .mypage, .login {
   margin-left: 20px;
   padding: 8px 16px;
   border: 1px solid #ccc;
