--- a/src/main/resources/static/css/login/sign.css
+++ b/src/main/resources/static/css/login/sign.css
@@ -26,7 +26,7 @@ body{
     align-items: center;
 }
 
-.id_content > input {
+.id_content input, .type_content input[type=radio]+label {
     height: 40px;
     width: 170px;
     border: solid 1px #AEAEAE;
@@ -110,4 +110,9 @@ select.box {
 
 .birth_month select, .birth_day select {
     margin-left : 7px;
+}
+
+.type_content input[type="radio"] {
+    vertical-align: middle;
+    appearance: none;
 }
