--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/board/boardList.css">
+    <link rel="stylesheet" href="/css/header_foter/header.css">
+    <link rel="stylesheet" href="/css/header_foter/foter.css"/>
 </head>
 <body>
-게시판
+<div th:replace="header_foter/header :: header"></div>
+<main>
+
+    <table class="board_con">
+        <thead>
+        <tr>
+            <th>종류</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+
+
+        </tr>
+        </thead>
+        <tbody class="board_list">
+
+        <tr th:each="board : ${board}">
+            <td th:text="${board.tripType == 1 ? '패키지' : '자유여행'}"></td>
+            <td th:text="${board.tripTitle}"></td>
+            <td th:text="${board.userId}"></td>
+            <td th:text="${#dates.format(board.tripDate, 'yyyy-MM-dd')}"></td>
+        </tr>
+
+        </tbody>
+
+    </table>
+
+    <!-- 페이지 이동 버튼 -->
+    <div class="pagination">
+        <a th:if="${currentPage > 1}" th:href="@{/board(page=${currentPage - 1})}">&laquo; 이전</a>
+        <span th:each="pageNum : ${#numbers.sequence(1, totalPages)}">
+            <a th:href="@{/board(page=${pageNum})}"
+               th:text="${pageNum}"
+               th:class="${pageNum == currentPage ? 'active' : ''}"></a>
+        </span>
+        <a th:if="${currentPage < totalPages}" th:href="@{/board(page=${currentPage + 1})}">다음 &raquo;</a>
+    </div>
+
+</main>
+
+
+<div th:replace="header_foter/foter :: foter"></div>
 </body>
 </html>
