로그아웃 구현, 로그인 후 세션에 회원명 저장 및 메인페이지에 회원명 출력

--- a/src/main/resources/static/css/header_foter/header.css
+++ b/src/main/resources/static/css/header_foter/header.css
@@ -43,10 +43,19 @@ header {
 }
 
 .schedule, .mypage, .login {
-  margin-left: 20px;
+  margin-left: 8px;
   padding: 8px 16px;
   border: 1px solid #ccc;
   background-color: white;
+  cursor: pointer;
+}
+
+.logout{
+  margin-left: 8px;
+  padding: 8px 16px;
+  border: 1px solid #3b75ff;
+  background-color: #3b75ff;
+  color : #fff;
   cursor: pointer;
 }
 
