--- a/src/main/resources/static/css/login/sign.css
+++ b/src/main/resources/static/css/login/sign.css
@@ -26,7 +26,13 @@ body{
     align-items: center;
 }
 
-.id_content input, .type_content input[type=radio]+label {
+.type_content input[type="radio"] {
+    vertical-align: middle;
+    appearance: none;
+    margin : 0;
+}
+
+.id_content input, .type_content input[type=radio]+label{
     height: 40px;
     width: 170px;
     border: solid 1px #AEAEAE;
@@ -44,6 +50,28 @@ body{
     margin: 5px;
     font-size: 12px;
     cursor: pointer;
+}
+
+.type_content input[type=radio]+label {
+    display:inline-block;
+    margin: 5px 0;
+    align-content: center;
+    text-align: center;
+}
+
+.type_content input[type=radio]:checked+label {
+    display:inline-block;
+    height: 40px;
+    width: 170px;
+    background-color:#1273E4;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 12px;
+    color : #fff;
+    cursor: pointer;
+    margin: 5px 0;
+    align-content: center;
+    text-align: center;
 }
 
 div span {
@@ -110,9 +138,4 @@ select.box {
 
 .birth_month select, .birth_day select {
     margin-left : 7px;
-}
-
-.type_content input[type="radio"] {
-    vertical-align: middle;
-    appearance: none;
 }
