--- a/src/main/resources/templates/login/binLogin.html
+++ b/src/main/resources/templates/login/binLogin.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <link href="/css/login/sign.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/login/binLogin.js" defer></script>
 </head>
 <body>
     <div class="bin_header_content">
         <h1>traveler</h1>
         <p>buniness 전용</p>
     </div>
-    <form action="">
-        <div class="sign_content">
-            <input type="text" name="userId" placeholder="아이디">
-            <input type="password" name="userPw" placeholder="비밀번호">
-            <input type="button" name="signIn" value="로그인">
-            <input type="button" name="singUp" value="회원가입">
+    <form>
+        <div class="login_content">
+            <input type="text" id="userId" name="userId" placeholder="아이디">
+            <input type="password" id="userPw" name="userPw" placeholder="비밀번호">
+            <input type="button" name="signIn" onclick="binLogin()" value="로그인">
+            <input type="button" name="singUp" onclick="binSign()" value="회원가입">
         </div>
     </form>
     <div class="idFind" onclick="#">아이디/비밀번호를 잊어버리셨나요?</div>
