--- a/src/main/resources/templates/hotel/hotelPlace.html
+++ b/src/main/resources/templates/hotel/hotelPlace.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" href="/css/header_foter/header.css" />
     <link rel="stylesheet" href="/css/hotel/hotel_main_first.css" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" defer></script>
-    <script src="../js/hotel/hotel.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="/js/hotel/hotel_list.js"></script>
     <meta charset="UTF-8">
-    <title>호텔 검색</title>
+    <title>호텔 목록</title>
 </head>
 <body>
 <header>
@@ -16,7 +16,7 @@
 </header>
 <div class="search_container">
     <form class="hotel_text" id="hotelForm" action="/hotel/place" method="get">
-        <input type="text" id="destination" name="place" placeholder="어디로 떠나시나요?">
+        <input type="text" id="destination" placeholder="어디로 떠나시나요?">
         <input type="text" id="checkin" placeholder="체크인">
         <input type="text" id="checkout" placeholder="체크아웃">
         <select id="guestCount">
@@ -31,7 +31,7 @@
 
 <div class="hotel_list">
     <div th:each="hotel : ${hotels}" class="hotel_item">
-        <img th:src="@{${hotel.hotelImg}}" th:alt="${hotel.hotelName}">
+        <img th:src="${hotel.hotelImg}" th:alt="${hotel.hotelName}">
         <div class="hotel_info">
             <a th:href="@{/hotel/hotelDetail/{hotelNO}(hotelNO=${hotel.hotelNO})}" id="hotel_detail">
                 <h2 th:text="${hotel.hotelName}"></h2>
