--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -9,52 +9,61 @@
 </head>
 
 <div class="container">
-<header>
+    <header>
 
-  <div class="header_content">
-      <h1 class="logo"><a href="/">traveler</a></h1>
-    <div class="button_content">
-        <th:block  th:if="${session.id != null}">
+        <div class="header_content">
+            <h1 class="logo"><a href="/">traveler</a></h1>
+            <div class="button_content">
+                <th:block th:if="${session.id != null}">
+                    <span class="userName"><b>[[${session.name}]]</b> 님</span>
+                    <button class="schedule">나의 일정</button>
+                    <button class="mypage">마이페이지</button>
+                    <button class="logout" onclick="logout()">로그아웃</button>
+                </th:block>
+                <th:block th:if="${session.id == null}">
+                    <button class="login" onclick="loginPage()">로그인/회원가입</button>
+                </th:block>
 
-            <button class="schedule">나의 일정</button>
-            <button class="mypage">마이페이지</button>
-        </th:block>
-        <th:block th:if="${session.id == null}">
-            <button class="login" onclick="loginPage()">로그인/회원가입</button>
-        </th:block>
+            </div>
 
-    </div>
-     
-  </div>
-  <nav>
-    <ul id="menu">
-        <li><a href="/nation">국가별</a></li>
-        <li><a href="/air">항공</a></li>
-        <li><a href="/hotel">숙박</a></li>
-        <li><a href="/ticket">티켓</a></li>
-        <li><a href="/pack">패키지</a></li>
-        <li>자유게시판</li>
-    </ul>
-  </nav>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // 네비게이션 메뉴 항목에 클릭 이벤트 리스너 추가
-            const menuItems = document.querySelectorAll('#menu li');
-            menuItems.forEach(item => {
-                item.addEventListener('click', function() {
-                    // 모든 항목에서 active 클래스 제거
-                    menuItems.forEach(i => i.classList.remove('active'));
-                    // 클릭된 항목에 active 클래스 추가
-                    this.classList.add('active');
+        </div>
+        <nav>
+            <ul id="menu">
+                <li><a href="/nation">국가별</a></li>
+                <li><a href="/air">항공</a></li>
+                <li><a href="/hotel">숙박</a></li>
+                <li><a href="/ticket">티켓</a></li>
+                <li><a href="/pack">패키지</a></li>
+                <li>자유게시판</li>
+            </ul>
+        </nav>
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                // 네비게이션 메뉴 항목에 클릭 이벤트 리스너 추가
+                const menuItems = document.querySelectorAll('#menu li');
+                menuItems.forEach(item => {
+                    item.addEventListener('click', function() {
+                        // 모든 항목에서 active 클래스 제거
+                        menuItems.forEach(i => i.classList.remove('active'));
+                        // 클릭된 항목에 active 클래스 추가
+                        this.classList.add('active');
+                    });
                 });
-            });
-        })
+            })
 
-        function loginPage(){
-             location.href="/login";
-        }
-    </script>
-</header>
+            function loginPage(){
+                 location.href="/login";
+            }
+
+            function logout(){
+                if(confirm("로그아웃 하시겠습니까?") == true){
+                    location.href="/logout";
+                } else {
+                    return false;
+                }
+            }
+        </script>
+    </header>
 
 </div>
 </body>
