--- a/src/main/resources/static/css/board/boardList.css
+++ b/src/main/resources/static/css/board/boardList.css
@@ -43,6 +43,15 @@ body, html {
 .board_list td {
     height: 50px;
 }
+.board_list a{
+    text-decoration : none;
+    color : black;
+    padding :auto;
+}
+.title_con{
+    width:100%;
+    height: 100%;
+}
 
 .board_list tr:hover {
     background-color: #f1f1f1;
