--- a/src/main/resources/static/css/board/boardDetail.css
+++ b/src/main/resources/static/css/board/boardDetail.css
@@ -2,7 +2,7 @@ main {
     padding-top:141px; /* header와 nav의 높이에 따라 조정 */
     padding-bottom: 50px;
     height: 100%;
-    display : flex;
+
     flex-direction: column;
     align-items: center;
 
@@ -31,7 +31,7 @@ body {
 }
 
 .img_con {
-    max-width: 100%;
+    max-width: 700px;
     height: auto;
     border-radius: 8px;
 }
