--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -10,17 +10,23 @@
 
 <div class="container">
     <header>
-
         <div class="header_content">
             <h1 class="logo"><a href="/">traveler</a></h1>
             <div class="button_content">
                 <th:block th:if="${session.id != null}">
+                    <input type="hidden" id="id" name="id" th:value="${session.id}">
                     <span class="userName"><b>[[${session.name}]]</b> 님</span>
                     <button class="schedule">나의 일정</button>
-                    <button class="mypage">마이페이지</button>
+                    <button class="mypage" onclick="myPage()">마이페이지</button>
                     <button class="logout" onclick="logout()">로그아웃</button>
                 </th:block>
-                <th:block th:if="${session.id == null}">
+                <th:block th:if="${session.binID != null}">
+                    <input type="hidden" id="binID" name="binID" th:value="${session.binID}">
+                    <span class="userName"><b>[[${session.binName}]]</b> 님</span>
+                    <button class="mypage" onclick="binPage()">마이페이지</button>
+                    <button class="logout" onclick="logout()">로그아웃</button>
+                </th:block>
+                <th:block th:if="${session.id == null} and ${session.binID == null}">
                     <button class="login" onclick="loginPage()">로그인/회원가입</button>
                 </th:block>
 
@@ -61,6 +67,16 @@
                 } else {
                     return false;
                 }
+            }
+
+            function myPage(){
+                let id = document.getElementById("id").value;
+                location.href="/myPage/"+id;
+            }
+
+            function binPage(){
+                let id = document.getElementById("binID").value;
+                location.href="/binPage/"+id;
             }
         </script>
     </header>
