--- a/src/main/resources/templates/pack/packMain.html
+++ b/src/main/resources/templates/pack/packMain.html
@@ -12,7 +12,8 @@
     />
     <script src="../js/header_foter/header.js" defer></script>
     <link rel="stylesheet" href="../css/pack/pack.css" />
-    <link rel="stylesheet" href="../css/header_foter/header.css" />
+    <script src="../js/header_foter/header.js" defer></script>
+    <link rel="stylesheet" href="/css/header_foter/header.css" />'
     <script src="../js/pack/pack.js" defer></script>
 
 
