--- a/src/main/resources/templates/air/airplane_main.html
+++ b/src/main/resources/templates/air/airplane_main.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Traveler</title>
-  <link rel="stylesheet" href="../css/header_foter/header.css" />
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
@@ -13,12 +14,14 @@
   <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js" defer></script>
 ////////////////////////////////////////////////////////////////////////////////////////////////
-
-  <link rel="stylesheet" href="../css/airplane/airplane_main_first.css" />
-  <link rel="stylesheet" href="../css/airplane/airplane_main_second.css" />
+  <link rel="stylesheet" href="/css/header_foter/header.css" />'
+  <link rel="stylesheet" href="/css/airplane/airplane_main_first.css" />
+  <link rel="stylesheet" href="/css/airplane/airplane_main_second.css" />
 ////////////////////////////////////////////////////////////////////////////////////////////////
-  <script src="../js/airplane/airplane_main.js" defer></script>
-  <script src="../js/airplane/airplane_data.js" defer></script>
+  <script src="/js/header_foter/header.js" defer></script>
+  <script src="/js/airplane/airplane_main.js" defer></script>
+  <script src="/js/airplane/airplane_data.js" defer></script>
+  <script src="/js/airplane/airplane_form.js" defer></script>
 ////////////////////////////////////////////////////////////////////////////////////////////////
 </head>
 
@@ -30,7 +33,7 @@
 <body>
 <main>
   <section class="air_search">
-    <form id="airSearchForm" action="/search/air" method="GET" class="search_box">
+    <form id="airSearchForm" action="/air/search" method="GET" class="search_box">
       <div class="trip_type">
         <input type="radio" id="round_trip" name="trip_type" value="roundtrip" checked>
         <label for="round_trip">왕복</label>
@@ -38,7 +41,7 @@
         <label for="one_way">편도</label>
       </div>
       <div class="field">
-        <input type="text" id="departure" name="departure" value="김포국제공항" readonly>
+        <input type="text" id="departure" name="departure" value="인천국제공항" readonly>
       </div>
       <div class="field">
         <input type="text" id="destination" name="destination" placeholder="도착지" readonly>
