마이페이지 - 비밀번호 변경 수정

--- a/src/main/resources/templates/header_foter/header.html
+++ b/src/main/resources/templates/header_foter/header.html
@@ -71,12 +71,12 @@
 
             function myPage(){
                 let id = document.getElementById("id").value;
-                location.href="/myPage/"+id;
+                location.href="/mypage/"+id;
             }
 
             function binPage(){
                 let id = document.getElementById("binID").value;
-                location.href="/binPage/"+id;
+                location.href="/binpage/"+id;
             }
         </script>
     </header>
