--- a/src/main/resources/templates/mypage/editorPW.html
+++ b/src/main/resources/templates/mypage/editorPW.html
@@ -6,13 +6,14 @@
     <link href="/css/mypage/editor.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/header_foter/header.css">
     <link rel="stylesheet" href="/css/header_foter/foter.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/mypage/editor.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="/js/mypage/editorPW.js" defer></script>
 </head>
 <body>
     <main>
         <div th:replace="header_foter/header :: header"></div>
         <form name="f" th:action="@{/mypage/pw/insert}" th:object="${vo}" method="post">
+            <input type="hidden" id="id" name="id" th:value="${session.id}">
             <div class="body_container">
                 <div class="table_container">
                     <table class="table_content">
@@ -44,7 +45,7 @@
                     </table>
                 </div>
                 <div class="btn_content">
-                    <input type="button" class="save_btn" id="save_btn" onclick="pwEditor()" value="수정하기">
+                    <input type="button" class="save_btn" id="saveBtn" name="saveBtn" onclick="pwEditor()" value="수정하기">
                 </div>
                 <div class="btn_content2">
                     <input type="button" class="back_btn" onclick="back()" value="취소">
